--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <figure>
             <img src="image/vocal2.png" alt="">
             <figcaption class="people1">Ахтямова София Шавкатовна</figcaption>
-            <figcaption>17 лет, вокалистка, хорошо поет, в Электрочайнике не была</figcaption>
+            <figcaption>17 лет, вокалистка, хорошо поет, в Электрочайнике не учавствовала</figcaption>
         </figure>
         <figure>
             <img src="image/Alex.jpeg" alt="">
@@ -82,4 +82,5 @@
         <p>Никакие права незащищены к сожалению...</p>
     </footer>
 </body>
+
 </html>
