--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <figcaption>17 лет, гитарист/бас-гитарист группы, бывший участник группы Электрочайник</figcaption>
         </figure>
         <figure>
-            <img src="image/vocal2.png" alt="">
+            <img src="image/vocal2.jpeg" alt="">
             <figcaption class="people1">Ахтямова София Шавкатовна</figcaption>
             <figcaption>17 лет, вокалистка, хорошо поет, в Электрочайнике не учавствовала</figcaption>
         </figure>
@@ -84,3 +84,4 @@
 </body>
 
 </html>
+
